$Id: History,v 1.31 2001-09-11 15:44:49 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
11 sep 01: L.Urban (stand-V03-02-02)
- G4VhEnergyLoss+G4VeEnergyLoss: bugfix in subcutoff delta generation
     
29 aug 01: mma (stand-V03-02-01)
- G4hIonisation::PostStepDoIt grecj term for spin 1/2 (not 1)
     
13 aug 01: mma
- G4eIonisation: new function ComputeRestrictedMeandEdx()
- G4hIonisation: new function ComputeRestrictedMeandEdx() + 'cleanup'
    
10 aug 01: mma
- store/retrieve PhysicsTables implemented in photelec, compton, gamaconv,
  annihil, eIonisa, eBrems, mulscat, hIonisa      
     
17 jul 01: mma (stand-V03-02-00)
- suppression of the production threshold in phot,compt,conv,annih

11 jul 01: mma
- GammaConversion::PostStepDoIt : sample epsil->power (rndm,0.333333)

29 may 01: V.Ivanchenko 
- clean up againist Linux ANSI strict compilation mode.
     
27 mar 01 mma (stand-V03-00-05)
- commented out the printing of subcutoff energies at initialization
     
05 mar 01 mma (stand-V03-00-04)
- new subdirectory: integral
  migration of all G4I.. processes from muons, standard, utils into integral
       
22 feb 01: mma (stand-V03-00-03)